--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,36 @@ version = "0.3.60"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.9"
+dependencies = [
+    "aiohttp>=3.11.8",
+    "alembic>=1.16.5",
+    "av>=14.2.0",
+    "comfyui-embedded-docs==0.2.6",
+    "comfyui-frontend-package==1.26.13",
+    "comfyui-workflow-templates==0.1.86",
+    "einops>=0.8.1",
+    "kornia>=0.7.1",
+    "numpy>=1.25.0",
+    "pillow>=11.3.0",
+    "psutil>=7.1.0",
+    "pydantic~=2.0",
+    "pydantic-settings~=2.0",
+    "pyyaml>=6.0.2",
+    "safetensors>=0.4.2",
+    "scipy>=1.13.1",
+    "sentencepiece>=0.2.1",
+    "soundfile>=0.13.1",
+    "spandrel>=0.4.1",
+    "sqlalchemy>=2.0.43",
+    "tokenizers>=0.13.3",
+    "torch>=2.8.0",
+    "torchaudio>=2.8.0",
+    "torchsde>=0.2.6",
+    "torchvision>=0.23.0",
+    "tqdm>=4.67.1",
+    "transformers>=4.37.2",
+    "yarl>=1.18.0",
+]
 
 [project.urls]
 homepage = "https://www.comfy.org/"
