--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,17 +8,22 @@ dependencies = [
     "aiohttp>=3.11.8",
     "alembic>=1.16.5",
     "av>=14.2.0",
+    "chardet>=5.2.0",
     "comfyui-embedded-docs==0.2.6",
     "comfyui-frontend-package==1.26.13",
     "comfyui-workflow-templates==0.1.86",
     "einops>=0.8.1",
+    "gitpython>=3.1.45",
     "kornia>=0.7.1",
+    "matrix-nio>=0.25.2",
     "numpy>=1.25.0",
     "pillow>=11.3.0",
     "psutil>=7.1.0",
     "pydantic~=2.0",
     "pydantic-settings~=2.0",
+    "pygithub>=2.8.1",
     "pyyaml>=6.0.2",
+    "rich>=14.1.0",
     "safetensors>=0.4.2",
     "scipy>=1.13.1",
     "sentencepiece>=0.2.1",
@@ -26,12 +31,14 @@ dependencies = [
     "spandrel>=0.4.1",
     "sqlalchemy>=2.0.43",
     "tokenizers>=0.13.3",
+    "toml>=0.10.2",
     "torch>=2.8.0",
     "torchaudio>=2.8.0",
     "torchsde>=0.2.6",
     "torchvision>=0.23.0",
     "tqdm>=4.67.1",
     "transformers>=4.37.2",
+    "typer>=0.19.2",
     "yarl>=1.18.0",
 ]
 
